Added phone number

--- a/vijay.html
+++ b/vijay.html
@@ -1,10 +1,22 @@
-<center>
-  <h1>vijay</h1>
-</center>
-<hr />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <center>
+      <h1>vijay</h1>
+    </center>
+    <hr />
 
-<p>
-  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos dolorem
-  enim nostrum minima necessitatibus blanditiis aut obcaecati animi ad, nulla ex
-  quae dolorum? Earum, doloremque! Et neque aspernatur voluptatum.
-</p>
+    <p>
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat quos
+      dolorem enim nostrum minima necessitatibus blanditiis aut obcaecati animi
+      ad, nulla ex quae dolorum? Earum, doloremque! Et neque aspernatur
+      voluptatum.
+    </p>
+    <p>Contact: 1122334455</p>
+  </body>
+</html>
